# cookiecutters

./: Makefile  README.md  commit_message.txt  pr_body.md
.github/: dependabot.yml
.github/scripts/: pyenv
.github/workflows/: ci.yml  keepalive.yml  slack.yml  update_projects.yml  update_repos.yml
_shared/: README.md  local_extensions.py
_shared/hooks/: post_gen_project.py
_shared/project/: .gitignore  .python-version  Dockerfile  LICENSE  Makefile  README.md  db.py  docker-compose.yml  pyproject.toml  setup.cfg  tox.ini
_shared/project/.github/: dependabot.yml
_shared/project/.github/workflows/: ci.yml  deploy.yml  keepalive.yml  redeploy.yml  slack.yml
_shared/project/conf/: alembic.ini  supervisord-dev.conf  supervisord.conf
_shared/project/migrations/: env.py
_shared/project/requirements/: checkformatting.in  coverage.in  dev.in  dockercompose.in  format.in  functests.in  lint.in  prod.in  template.in  tests.in  typecheck.in
_shared/project/tests/: conftest.py  pyproject.toml
_shared/project/tests/factories/: factoryboy_sqlalchemy_session.py
_shared/project/tests/functional/pytest_plugins/: db.py
_shared/project/tests/pytest_plugins/: db.py  factory_boy.py
_shared/project/tests/unit/pytest_plugins/: db.py
pyapp/: README.md  cookiecutter.json
pyapp/hooks/: post_gen_project.py
pyapp/{{ cookiecutter.slug }}/: .docker.env  .python-version  Dockerfile  pyproject.toml  setup.cfg  tox.ini
pyapp/{{ cookiecutter.slug }}/.github/workflows/: ci.yml  keepalive.yml  redeploy.yml
pyapp/{{ cookiecutter.slug }}/conf/: alembic.ini  supervisord-dev.conf  supervisord.conf
pyapp/{{ cookiecutter.slug }}/requirements/: checkformatting.in  coverage.in  dev.in  dockercompose.in  format.in  functests.in  lint.in  prod.in  template.in  tests.in
pyapp/{{ cookiecutter.slug }}/tests/: conftest.py  pyproject.toml
pyapp/{{ cookiecutter.slug }}/tests/factories/: __init__.py  factoryboy_sqlalchemy_session.py
pyapp/{{ cookiecutter.slug }}/tests/functional/: sanity_test.py
pyapp/{{ cookiecutter.slug }}/tests/unit/pytest_plugins/: db.py
pyapp/{{ cookiecutter.slug }}/tests/unit/{{ cookiecutter.package_name }}/: core_test.py
pyapp/{{ cookiecutter.slug }}/{{ cookiecutter.package_name }}/: __main__.py  _version.py  app.py  core.py
pypackage/: README.md  cookiecutter.json  local_extensions.py
pypackage/{{ cookiecutter.slug }}/: HACKING.md  INSTALL.md  LICENSE  README.md  docker-compose.yml
pypackage/{{ cookiecutter.slug }}/.github/: dependabot.yml
pypackage/{{ cookiecutter.slug }}/.github/workflows/: slack.yml
pypackage/{{ cookiecutter.slug }}/src/{{ cookiecutter.package_name }}/: __main__.py  cli.py  core.py  main.py
pypackage/{{ cookiecutter.slug }}/tests/functional/: cli_test.py
pypackage/{{ cookiecutter.slug }}/tests/pytest_plugins/: factory_boy.py
pypackage/{{ cookiecutter.slug }}/tests/unit/{{ cookiecutter.package_name }}/: cli_test.py  core_test.py  main_test.py
pyramid-app/: README.md  cookiecutter.json
pyramid-app/{{ cookiecutter.slug }}/: .gitignore  HACKING.md  Makefile  README.md  docker-compose.yml  package.json  {% if cookiecutter.get("docker") == "yes" %}Dockerfile{% endif %}
pyramid-app/{{ cookiecutter.slug }}/.github/: dependabot.yml
pyramid-app/{{ cookiecutter.slug }}/.github/workflows/: deploy.yml
pyramid-app/{{ cookiecutter.slug }}/conf/: development.ini  gunicorn-dev.conf.py  gunicorn.conf.py  gunicorn.dev.conf.py  production.ini  supervisord-dev.conf  supervisord.conf
pyramid-app/{{ cookiecutter.slug }}/requirements/: checkformatting.in  coverage.in  dev.in  format.in  functests.in  lint.in  prod.in  template.in  tests.in  typecheck.in
pyramid-app/{{ cookiecutter.slug }}/tests/functional/: app_test.py
pyramid-app/{{ cookiecutter.slug }}/tests/functional/pytest_plugins/: db.py
pyramid-app/{{ cookiecutter.slug }}/tests/pytest_plugins/: db.py  pyramid.py
pyramid-app/{{ cookiecutter.slug }}/tests/unit/: conftest.py
pyramid-app/{{ cookiecutter.slug }}/tests/unit/pytest_plugins/: pyramid.py
pyramid-app/{{ cookiecutter.slug }}/tests/unit/{{ cookiecutter.package_name }}/: app_test.py
pyramid-app/{{ cookiecutter.slug }}/{{ cookiecutter.package_name }}/: __init__.py  app.py  db.py  pshell.py
pyramid-app/{{ cookiecutter.slug }}/{{ cookiecutter.package_name }}/migrations/: env.py  script.py.mako
pyramid-app/{{ cookiecutter.slug }}/{{ cookiecutter.package_name }}/models/: __init__.py
pyramid-app/{{ cookiecutter.slug }}/{{ cookiecutter.package_name }}/scripts/: init_db.py
